[tool.poetry]
name = "specsavers"
version = "0.1.0"
description = "A Python wrapper around the Specsavers appointment booking API"
authors = ["Alex Ward <alxwrd@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests-html = "^0.10.0"
requests = "^2.23.0"
maya = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
